; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/dscan/extr_dscan.c_set_level.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/dscan/extr_dscan.c_set_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rnd_enemy = common dso_local global i32 0, align 4
@rnd_kirai = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_level(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 9
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = mul nsw i32 %6, 12
  %8 = sub nsw i32 100, %7
  store i32 %8, i32* @rnd_enemy, align 4
  %9 = load i32, i32* %2, align 4
  %10 = mul nsw i32 %9, 6
  %11 = sub nsw i32 50, %10
  store i32 %11, i32* @rnd_kirai, align 4
  br label %13

12:                                               ; preds = %1
  store i32 0, i32* @rnd_enemy, align 4
  store i32 0, i32* @rnd_kirai, align 4
  br label %13

13:                                               ; preds = %12, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
